Feature/tweak records (#596)
Implemented:
- Yaml tweakDocuments and records
- Serialize records


Co-authored-by: Octavian Dima <hello@wopss.net>

--- a/WolvenKit/Views/Documents/TweakDocumentView.xaml
+++ b/WolvenKit/Views/Documents/TweakDocumentView.xaml
@@ -100,10 +100,14 @@
                                    AutoGenerateColumns="False"
                                    AllowEditing="False"
                                    AllowResizingColumns="True"
+                                   AllowSorting="True"
+                                   AllowFiltering="True"
                                    >
                 <syncfusion:SfTreeGrid.Columns>
 
                     <syncfusion:TreeGridTextColumn MappingName="Name" />
+
+                    <syncfusion:TreeGridTextColumn MappingName="DisplayType" HeaderText="Type" />
 
                     <syncfusion:TreeGridTemplateColumn MappingName="DisplayString"
                                                        HeaderText="Value"
@@ -142,6 +146,8 @@
                             </DataTemplate>
                         </syncfusion:TreeGridTemplateColumn.EditTemplate>-->
                     </syncfusion:TreeGridTemplateColumn>
+
+                    
 
                 </syncfusion:SfTreeGrid.Columns>
 
